<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_6sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp">

        <com.reemsservices.helper.CustomTextviewMontserratSemiBold
            android:id="@+id/txt_message"
            style="@style/black_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/settiming" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_247"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/open247"
                style="@style/black_12"
                android:buttonTint="@color/darkblue"/>

            <RadioButton
                android:id="@+id/radio_shop_closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                style="@style/black_12"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:buttonTint="@color/darkblue"/>

            <RadioButton
                android:id="@+id/radio_manual_setTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setmanualtime"
                style="@style/black_12"
                android:buttonTint="@color/darkblue"/>

        </RadioGroup>
        <LinearLayout
            android:id="@+id/linear_set_timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <com.reemsservices.helper.CustomTextviewMontserratSemiBold
                   android:id="@+id/txt_openingTime"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/setopeningtime"
                   style="@style/black_12"/>

               <com.reemsservices.helper.CustomEditTextMontserratRegular
                   android:id="@+id/edt_openTime"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_30sdp"
                   style="@style/black_10"
                   android:background="@null"
                   android:hint="8:00 Am"
                   android:textColorHint="@color/black"
                   android:layout_marginTop="@dimen/_5sdp"
                   android:editable="false"/>

           </LinearLayout>

          <LinearLayout
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <com.reemsservices.helper.CustomTextviewMontserratSemiBold
                  android:id="@+id/txt_closingTime"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/setclosingtime"
                  style="@style/black_12" />

              <com.reemsservices.helper.CustomEditTextMontserratRegular
                  android:id="@+id/edt_closeTime"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_30sdp"
                  style="@style/black_10"
                  android:background="@null"
                  android:hint="8:00 Pm"
                  android:textColorHint="@color/black"
                  android:layout_marginTop="@dimen/_5sdp"
                  android:editable="false"/>


          </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/black_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/custom_buttondarkblueborder"
                    android:text="@string/cancle"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_40sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_save"
                    style="@style/white_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:gravity="center"
                    android:background="@drawable/custom_button_square"
                    android:text="@string/save"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>