<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_corner_round"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical">

        <com.reemsservices.helper.CustomTextviewMontserratSemiBold
            android:id="@+id/txt_title"
            style="@style/white_14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/wallethelp"
            android:gravity="center|left"
            android:textColor="@color/darkblue" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical">

        <com.reemsservices.helper.CustomTextviewMontserratSemiBold
            style="@style/black_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructtoclaimcoins" />

        <com.reemsservices.helper.CustomTextviewMontserratRegular
            style="@style/gray_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/instructtoclaimcontent" />

    </LinearLayout>

</LinearLayout>